--- a/volumes-sample/docker-compose-volume.yml
+++ b/volumes-sample/docker-compose-volume.yml
@@ -10,6 +10,6 @@ services:
     volumes:
       - ./reactapp/client/build:/usr/share/nginx/html
 
-# docker compose up --build 
+# docker compose up --build -
 # docker compose up -d
 # docker compose up --build --recreate
